<?xml version="1.0"?>
<package format="2">
  <name>global_planner</name>
  <version>0.0.0</version>
  <description>The global_planner package</description>
  <maintainer email="t.mueller@tufast.de">thilo</maintainer>
  <maintainer email="geissler@tufast.de">robin</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tufast_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tufast_msgs</build_export_depend>
  <build_export_depend>jsk_recognition_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tufast_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  
  <export>
  </export>
</package>
